completed simple search

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,1 +1,11 @@
-<p>helloooooo</p>
+<%= simple_form_for :item, method: :get do |f| %>
+  <%= f.input :search %>
+  <%= f.button :submit %>
+<% end %>
+
+<% @items.each do |item| %>
+  <p>item.name</p>
+  <p>item.category</p>
+  <p>item.quantity</p>
+  <p>item.indicator</p>
+<% end %>
