--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,12 @@
+<div class="container">
+
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),
+<%= image_tag "background2.png" %>>
+  <div class="banner-content">
+    <h1>Grow Share Eat</h1>
+<%= image_tag "logo_grow_share_long_f.png" %>
+    <p>Think global - Act local!</p>
+
 <%= simple_form_for :item, method: :get do |f| %>
   <%= f.input :search %>
   <%= f.button :submit %>
@@ -9,3 +18,8 @@
   <p>item.quantity</p>
   <p>item.indicator</p>
 <% end %>
+
+  </div>
+</div>
+
+</div>
