completed new and create action for items

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,8 +4,5 @@
 <% end %>
 
 <% @items.each do |item| %>
-  <p>item.name</p>
-  <p>item.category</p>
-  <p>item.quantity</p>
-  <p>item.indicator</p>
+  <p><%= link_to item.name, item_path(item) %></p>
 <% end %>
