--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,4 @@
-// Import page-specific CSS files here.
+// Import page-specific CSS files here. It's the main page
 @import "home";
 @import "banner";
+@import "cards";
