--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%)>
+  <!-- <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%)>
 
     <div class="banner-content">
 
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
+       insert <div class="card"> -->
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
         <div class="card-category">Popular</div>
         <div class="card-description">
