--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,20 +1,23 @@
 <div class="container">
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),
-<%= image_tag "background2.png" %>>
-  <div class="banner-content">
-    <h1>Grow Share Eat</h1>
-<%= image_tag "logo_grow_share_long_f.png" %>
-    <p>Think global - Act local!</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%)>
+    <%= image_tag "background2.png" %>>
+      <div class="banner-content">
+        <h1>Grow Share Eat</h1>
+    <%= image_tag "logo_grow_share_long_f.png" %>
+        <p>Think global - Act local!</p>
 
-<%= simple_form_for :item, method: :get do |f| %>
-  <%= f.input :search %>
-  <%= f.button :submit %>
-<% end %>
 
-<% @items.each do |item| %>
-  <p><%= link_to item.name, item_path(item) %></p>
-<% end %>
+
+    <%= form_tag(root_path, method: :get) do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag 'Search', name: nil %>
+    <% end %>
+
+
+    <% @items.each do |item| %>
+      <p><%= link_to item.name, item_path(item) %></p>
+    <% end %>
 
   </div>
 </div>
