fixed bugs and improved flow of app. added user profiles which are accessible through the navbar, and also improved links, and also allowed for people to buy things by creating new bookings from the item show page. also incorporated css with ruby on index page. HOWEVER the search page still has to be connected to the overall app, and delete actions are not in place.

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,1 +1,8 @@
 <!-- a create page for bookings (will be redirected here after buyer pressed "buy" on /items/show.html.erb -->
+
+
+<%= simple_form_for [@item, @booking] do |f| %>
+  <%= f.input :date %>
+  <%#= f.association :ingredient, as: :select %>
+  <%= f.button :submit %>
+<% end %>
