--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,3 +6,5 @@
 <p><%= @item.user.first_name %></p>
 <p><%= @item.user.email %></p>
 
+<%= link_to "buy this item", new_item_booking_path(@item) %>
+
