--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%)>
-    <%= image_tag "background2.png" %>>
+    <%= image_tag "background2.png" %>
       <div class="banner-content">
         <h1>Grow Share Eat</h1>
     <%= image_tag "logo_grow_share_long_f.png" %>
@@ -8,100 +8,32 @@
 
 
 
-    <%= form_tag(root_path, method: :get) do %>
+    <%= form_tag(items_path, method: :get) do %>
       <%= text_field_tag :search, params[:search] %>
       <%= submit_tag 'Search', name: nil %>
     <% end %>
 
 
+    </div>
+  </div>
+
+<div class="container">
+  <div class="row">
     <% @items.each do |item| %>
-      <p><%= link_to item.name, item_path(item) %></p>
+      <div class="col-xs-12 col-sm-4">
+        <%= link_to item_path(item), :class => "card-link" do %>
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+            <div class="card-category">Popular</div>
+              <div class="card-description">
+                <h2><%= link_to item.name, item_path(item) %></h2>
+                <p>Very fresh, the best</p>
+              </div>
+            <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/charleseeckhout">
+            <!-- <a class="card-link" href="#" ></a> -->
+          </div>
+        <% end %>
+      </div>
     <% end %>
-
-
-    </div>
-  </div>
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
-       insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>banana</h2>
-          <p>Very fresh, the best</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/charleseeckhout">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>durian</h2>
-          <p>Vust perfect</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/charleseeckhout">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>citron</h2>
-          <p>Very cool</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/charleseeckhout">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>banana</h2>
-          <p>the best</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/charleseeckhout">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>pear</h2>
-          <p>Very juicy</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/charleseeckhout">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Apple</h2>
-          <p>tasty, the best</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/charleseeckhout">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
   </div>
 </div>
 
