--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -5,11 +5,12 @@
     <div class="banner-content">
       <h1>Grow <%= image_tag "Logo_grow_share_short.png", {class: "img-circle", id: "logo"} %>Share</h1>
       <%= simple_form_for :item, method: :get do |f| %>
+      <%#= simple_form_for :item, :url => {:action => "index"} do |f| %>
       <%= f.input :search, placeholder: "search fruits..."%>
       <%= f.button :submit, "Search" %>
       <% end %>
       <% @items.each do |item| %>
-      <p><%= link_to item.name, item_path(index) %></p>
+      <p><%= link_to item.name, item_path(item) %></p>
       <% end %>
     </div>
   </div>
