improved search design

--- a/app/assets/stylesheets/pages/_banner.scss
+++ b/app/assets/stylesheets/pages/_banner.scss
@@ -1,12 +1,13 @@
 .banner {
   color: white;
   text-align: center;
-  height: 40vh;
+  height: 100vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), image-url("pexels.jpg");
 }
 .banner h1 {
   font-size: 50px;
