--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -1,17 +1,15 @@
-<div class="container">
-
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 50%, rgba(0,36,61,0.6) 100%), url('http://res.cloudinary.com/rtm/image/upload/v1508228802/g70w04qlfus6tsgqh71i.jpg');">
-
-    <div class="banner-content">
-      <h1>Grow <%= image_tag "Logo_grow_share_short.png", {class: "img-circle", id: "logo"} %>Share</h1>
-      <%= simple_form_for :item, method: :get do |f| %>
-      <%#= simple_form_for :item, :url => {:action => "index"} do |f| %>
-      <%= f.input :search, placeholder: "search fruits..."%>
-      <%= f.button :submit, "Search" %>
-      <% end %>
-      <% @items.each do |item| %>
-      <p><%= link_to item.name, item_path(item) %></p>
-      <% end %>
-    </div>
+<div class="banner">
+  <div class="banner-content text-center">
+    <h1>Buy local from your neighbors!</h1>
+    <p>GrowShare brings the farmer's market to your community</p>
+    <%= simple_form_for :item, method: :get do |f| %>
+    <%#= simple_form_for :item, :url => {:action => "index"} do |f| %>
+    <%= f.input :search, placeholder: "search fruits..."%>
+    <%= f.button :submit, "Search" %>
+    <% end %>
+    <% @items.each do |item| %>
+    <p><%= link_to item.name, item_path(item) %></p>
+    <% end %>
+    <%= link_to "Sign Up", new_user_session_path, class: "btn btn-lg btn-primary"  %>
   </div>
 </div>
