--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,7 +8,7 @@
 
 
 
-    <%= form_tag(items_path, method: :get) do %>
+    <%= form_tag(root_path, method: :get) do %>
       <%= text_field_tag :search, params[:search] %>
       <%= submit_tag 'Search', name: nil %>
     <% end %>
