--- a/app/assets/stylesheets/pages/_cards.scss
+++ b/app/assets/stylesheets/pages/_cards.scss
@@ -1,6 +1,6 @@
 .card {
   height: 175px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  text-shadow: 0 1px 3px rgba(0,0,0,0.4);
   background-size: cover !important;
   background-position: center;
   color: white;
@@ -31,7 +31,7 @@
 }
 .card-description p {
   font-size: 14px;
-  opacity: 0.7;
+  opacity: 0.8;
   font-weight: lighter;
 }
 .card-link {
@@ -41,13 +41,12 @@
   right: 0;
   width: 100%;
   z-index: 2;
-  background: black;
+  background: grey;
   opacity: 0;
 }
 .card-link:hover {
-  opacity: 0.1;
+  opacity: 0.2;
 }
-
 
 
 
