--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,3 +8,8 @@
 
 <%= link_to "buy this item", new_item_booking_path(@item) %>
 
+<%= javascript_tag do %>
+  $(document).ready(function() {
+    alert('<%= @alert_message %>');
+  });
+<% end %>
