--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,31 @@
-<h1>Users profile page</h1>
-
-<p>***picture here maybe?</p>
-<p><%= @user.first_name %> <%= @user.last_name %></p>
-<p><%= @user.email %></p>
-
-<h2>Your produce:</h2>
-<ul>
-  <% @user_items.each do |item| %>
-    <li><%= link_to item.name, item_path(item) %></li>
-  <% end %>
-</ul>
-
-<h2>Your bookings:</h2>
-<ul>
-  <% @user_bookings.each do |booking| %>
-    <li><%= booking.date %></li>
-    <li><%= link_to booking.seller.first_name, user_path(booking.seller) %></li>
-    <li>if link above, which is suppose to be the user first_name, is something like /users/1, then that means that the user didnt set a first name</li>
-  <% end %>
-</ul>
-
-<%= link_to "create new item", new_item_path %>
+<div class="container">
+  <div class="row">
+    <div class="second-container">
+      <div class="col-xs-12 col-sm-12 col-md-12">
+        <h1><%= @user.first_name.capitalize %> <%= @user.last_name.capitalize %></h1>
+        <h2>Farming is living.</h2>
+        <h4><%= @user.email %></h4>
+        <div class="avvie"></div>
+        <div class="flex-container">
+          <div class="flex-item">
+            <h3><strong>Your Produce:</strong></h3>
+            <ul>
+              <% @user_items.each do |item| %>
+                <li><%= link_to item.name, item_path(item), class: "linking" %></li>
+              <% end %>
+            </ul>
+            <%= link_to "create new item", new_item_path, class: "btn btn-primary" %>
+          </div>
+          <div class="flex-item">
+            <h3><strong>Your orders:</strong></h3>
+            <ul>
+              <% @user_bookings.each do |booking| %>
+                <li><%= booking.item.name %> - <%= booking.date %> | purchased from: <%= link_to booking.seller.first_name, user_path(booking.seller), class: "linking" %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
