--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,11 +8,12 @@
         <p>GrowShare brings the farmer's market to you</p>
 
 
-
+    <div class="form">
     <%= form_tag(root_path, method: :get) do %>
       <%= text_field_tag :search, params[:search] %>
       <%= submit_tag 'Search', name: nil %>
     <% end %>
+    </div>
 
 
     </div>
