--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,11 +6,12 @@
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
+  <%= link_to "Sign Up", "/users/sign_up", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Seller", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Help", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Message", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
