--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,5 +5,6 @@
   <%= f.input :category, collection: ["vegetable", "fruit"], as: :select %>
   <%= f.input :quantity %>
   <%= f.input :indicator, collection: ["kg", "g"], as: :select %>
+  <%= f.input :photo, as: :attachinary %>
   <%= f.button :submit %>
 <% end %>
