--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
     <% end %>
     </div>
     <div class="search">
-      <%= render "search" %>
+      <%#= render "search" %>
    </div>
   </div>
   <div class="right-part">
