--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -5,3 +5,15 @@
   position: sticky !important;
   top: 0 !important;
 }
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 50px;
+}
+
+.dynamic-map {
+  width: 800px;
+  margin-left: 50px;
+}
