--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -33,6 +33,14 @@
 </div>
   </div>
 
+<script>
+  $(".search-button").click(function() {
+      $('html,body').animate({
+        scrollTop: $(".content").offset().top
+      }, 1000);
+    });
+</script>
+
 
 
 
