--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -105,12 +105,11 @@
 
 .search {
   position: center;
-
 }
 
 .search-bar {
  width: 70%;
- text-align:right;
+ text-align:left;
  height: 50px;
  margin: 10px;
  border-radius: 8px;
