--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,19 +1,18 @@
-#map {
-  flex: 0 0 450px;
-  height: 100vh;
-  width: 130vh;
-  position: sticky !important;
-  top: 0 !important;
-}
+
 
 .content {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-content: center;
   margin: 50px;
 }
 
 .dynamic-map {
-  width: 800px;
   margin-left: 50px;
+  flex: 0 0 800px;
+  height: 90vh;
+  position: sticky !important;
+  top: 0 !important;
+
 }
+
