--- a/app/assets/stylesheets/pages/_cards.scss
+++ b/app/assets/stylesheets/pages/_cards.scss
@@ -1,8 +1,9 @@
 .card {
   height: 250px;
+  width: 250px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.4);
-  // background-size: cover !important;
-  // background-position: center;
+  background-size: cover !important;
+  background-position: center;
   background: white;
   color: grey;
   position: relative;
@@ -76,6 +77,7 @@
   transition: background 0.3s ease;
   display: block;
   margin: auto;
+  text-align: center;
 }
 
 .btn-treehouse:hover {
@@ -84,16 +86,6 @@
   text-decoration: none;
   color: white;
 }
-
-
-
-
-.container-text {
-  display: flex;
-  align-content: space-between;
-}
-
-
 
 
 
