--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -1,7 +1,7 @@
 
 
 <% @items.each do |item| %>
-      <div class="col-xs-12 col-sm-4">
+      <div class="col-xs-12 col-sm-6 col-md-4">
 
           <div class="card">
             <%= item_image_tag_or_default(item) %>
