--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="container">
+  <div class="content">
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="studio-card">
