--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,7 +11,7 @@
 
 
     <div class="form">
-    <%= form_tag(root_path, method: :get) do %>
+    <%= form_tag(root_path(anchor: "map"), method: :get) do %>
       <%= text_field_tag :search, params[:search], class:"search-bar " %>
       <%= submit_tag 'Search', name: nil, class: "search-button search-button-banner"%>
     <% end %>
@@ -27,19 +27,23 @@
     </div>
   </div>
 
-  <div class="dynamic-map">
+  <div id="map" class="dynamic-map">
       <%= render "map" %>
   </div>
 </div>
   </div>
 
+
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
-  $(".search-button").click(function() {
+  $(".search-button").click(function(event) {
+      // event.preventDefault();
+      // event.stopPropagation();
       $('html,body').animate({
         scrollTop: $(".content").offset().top
-      }, 1000);
+      }, 600);
     });
-</script>
+</script> -->
 
 
 
