--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
-      <h2>Sign up</h2>
+            <div class="form-login">
+      <h1>Sign up</h1>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
@@ -20,6 +21,7 @@
       <% end %>
       <%= render "devise/shared/links" %>
     </div>
+  </div>
   </div>
 </div>
 
