reimplemented JS to detect if there was a search then scroll

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -9,13 +9,20 @@
 
         <p>GrowShare brings the farmer's market to you</p>
 
-
     <div class="form">
-    <%= form_tag(root_path(anchor: "map"), method: :get) do %>
+    <%= form_tag(root_path, method: :get) do %>
       <%= text_field_tag :search, params[:search], class:"search-bar " %>
       <%= submit_tag 'Search', name: nil, class: "search-button search-button-banner"%>
     <% end %>
     </div>
+
+<!--     <div class="form">
+    <%#= form_tag(root_path(anchor: "map"), method: :get) do %>
+      <%#= text_field_tag :search, params[:search], class:"search-bar " %>
+      <%#= submit_tag 'Search', name: nil, class: "search-button search-button-banner"%>
+    <%# end %>
+    </div> -->
+    <!-- we can do this in ruby so the it jumps to a section of the page but it doesn't scroll -->
 
     </div>
 </div>
@@ -34,16 +41,17 @@
   </div>
 
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
-  $(".search-button").click(function(event) {
+  // /?utf8=✓&search=Lobster
+  if(/&search=/.test(window.location.href) && $(".content").length > 0){
       // event.preventDefault();
       // event.stopPropagation();
       $('html,body').animate({
         scrollTop: $(".content").offset().top
       }, 600);
-    });
-</script> -->
+  }
+</script>
 
 
 
