--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -8,7 +8,7 @@
           <div class="card-description">
               <h3><%= item.name.capitalize %></h3>
               <p>Super fresh and yummy</p>
-              <p>34 USD</p>
+              <p><%= item.price %> USD</p>
           </div>
               <%= link_to "Show me more", item_path(item), class: "btn-treehouse" %>
           </div>
