--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer site-footer">
   <div class="footer-links">
     <a href="#"><i class="fa fa-github"></i></a>
     <a href="#"><i class="fa fa-instagram"></i></a>
@@ -8,4 +8,6 @@
   </div>
   <div class="footer-copyright">
      <i class="fa fa-heart"></i> GrowShare
-</div>
+</footer>
+
+
