--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 
@@ -24,4 +23,8 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+.site-footer, .page-wrap:after {
+  height: 100px;
 }
