--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
+  <div class="page-wrap">
     <%= yield %>
     <%= javascript_include_tag "https://maps.google.com/maps/api/js?key=#{ENV['GOOGLE_API_BROWSER_KEY']}" %>
     <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/markerclusterer/src/markerclusterer_compiled.js" %>
@@ -20,6 +21,8 @@
     <%= javascript_include_tag "application" %>
     <%= cloudinary_js_config %>
     <%= yield(:after_js) %>
+
+    </div>
     <%= render 'shared/footer' %>
   </body>
 </html>
