--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,7 +11,7 @@
 
     <div class="form">
     <%= form_tag(root_path, method: :get) do %>
-      <%= text_field_tag :search, params[:search], class:"search-bar " %>
+      <%= text_field_tag :search, params[:search], class:"search-bar", placeholder: "Kiwi, banana, etc"%>
       <%= submit_tag 'Search', name: nil, class: "search-button search-button-banner"%>
     <% end %>
     </div>
