--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,13 @@
 <!-- a create page for bookings (will be redirected here after buyer pressed "buy" on /items/show.html.erb -->
 
-
-<%= simple_form_for [@item, @booking] do |f| %>
-  <%= f.input :date %>
-  <%#= f.association :ingredient, as: :select %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <%= simple_form_for [@item, @booking] do |f| %>
+        <%= f.input :date %>
+        <%#= f.association :ingredient, as: :select %>
+        <%= f.button :submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
