--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,31 +3,66 @@
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="studio-card">
-          <h1><%= @item.name %></h1>
-          <h3>Category: <%= @item.category %></h3>
-          <h3>Quantity: <%= @item.quantity %><%= @item.indicator %></h3>
-          <p>Seller: <%= @item.user.first_name %></p>
-          <p>Seller mail address: <%= @item.user.email %></p>
-          <p><%= @item.description %></p>
 
+             <h1><%= @item.name %></h1>
+            <div class="message">
+                <ul>
+                <li>
+                <div class="message-body">
+                  <p><strong>Product info:</strong> <%= @item.description %></p>
+                </div>
+                </li>
 
-          <div class="message">
-            <img class="avatar-large" src="https://kitt.lewagon.com/placeholder/users/gabriel-dehan">
-            <div class="message-name">
-              <h3>Gab Dehan</h3>
-              <p>10/07/17</p>
-            </div>
-            <div class="message-body">
-              <p><strong>I am not sure yet!</strong></p>
-              <p>
-                I am not sure yet! I might be in Shanghai at this moment... Can I tell you later?
-              </p>
-            </div>
-            <div class="message-status">
-              <p class="status pending">Pending</p>
-              <p class="price">€345</p>
-            </div>
+                <li>
+                <div class="message-body">
+                  <p><strong>Category:</strong> <%= @item.category %></p>
+               </div>
+                </li>
+
+                <li>
+                <div class="message-body">
+                  <p><strong>Quantity:</strong> <%= @item.quantity %><%= @item.indicator %> </p>
+               </div>
+                </li>
+
+                <li>
+                <div class="message-body">
+                  <p><strong>Price:</strong> Price: 10$/kg</p>
+               </div>
+                </li>
+              </ul>
           </div>
+
+ <div class="message">
+                <div class="message-body">
+                  <p><strong>Seller review:</strong></p>
+                  <p>
+                   Hello neighbour! I'm passianate about food. I'm producing in my garden delicius produce. I hope you will enjoy it :-)!
+                  </p>
+                </div>
+
+                <div class="message-status">
+                  <p class="status pending">ranking</p>
+                  <p class="price">* * * *</p>
+               </div>
+
+                <div class="message-name">
+                  <h3><%= @item.user.first_name %></h3>
+                  <p>info@buy.com</p>
+                </div>
+
+             <img class="avatar-large" src="https://kitt.lewagon.com/placeholder/users/gabriel-dehan">
+              </div>
+
+
+
+
+
+
+
+
+
+
 
 
           <div class="btn-buy"> <%= link_to "Buy", new_item_booking_path(@item) , class: "btn btn-primary" %>
