completed style for booking page

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,6 +3,9 @@
 <style>
   #booking-form {
     padding: 50px;
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
   }
   .button {
     border-radius: 3px;
@@ -19,6 +22,15 @@
   .booking-title {
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  .booking-image {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .booking-pic {
+    border-radius: 3px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
   }
 </style>
 
@@ -29,6 +41,9 @@
   <div class="row">
     <div class="col-md-8 col-sm-offset-2">
       <div id="booking-form">
+        <div class="booking-image">
+          <%= cl_image_tag @item.photo.path, width: 200, height: 200, crop: :fill, class: "booking-pic" %>
+        </div>
         <%= simple_form_for [@item, @booking] do |f| %>
           <div class="form-box">
             <%= f.input :date, class: "date-input" %>
