--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,13 @@
-<%= simple_form_for([ @seller, @review ], url: new_user_review_path(@seller)) do |form| %>
-  <%= form.input :content, as: :text %>
-  <%= form.button :submit %>
-<% end %>
+
+<div class ="container">
+
+<div class="row">
+<div class="col col-sm-4">
+  <%= simple_form_for([@seller, @review ], url: new_user_review_path(@seller)) do |form| %>
+    <%= form.input :content, as: :text %>
+    <%= form.button :submit %>
+  <% end %>
+</div>
+</div>
+</div>
+
