--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,12 +1,19 @@
-
-<%= simple_form_for @item do |f| %>
-  <%= f.input :name %>
-  <%= f.input :good_until %>
-  <%= f.input :category, collection: ["vegetable", "fruit"], as: :select %>
-  <%= f.input :quantity %>
-  <%= f.input :indicator, collection: ["kg", "g"], as: :select %>
-  <%= f.input :price %>
-  <%= f.input :description %>
-  <%= f.input :photo, as: :attachinary %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
+      <div class="form-login">
+        <%= simple_form_for @item do |f| %>
+        <%= f.input :name %>
+        <%= f.input :good_until %>
+        <%= f.input :category, collection: ["vegetable", "fruit"], as: :select %>
+        <%= f.input :quantity %>
+        <%= f.input :indicator, collection: ["kg", "g"], as: :select %>
+        <%= f.input :price %>
+        <%= f.input :description %>
+        <%= f.input :photo, as: :attachinary %>
+        <%= f.button :submit, class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
