--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
                 <li><%= link_to item.name, item_path(item), class: "linking" %></li>
               <% end %>
             </ul>
-            <%= link_to "create new item", new_item_path, class: "btn btn-primary" %>
+            <%= link_to "Produce new item", new_item_path, class: "btn btn-primary" %>
           </div>
           <div class="flex-item">
             <h3><strong>Your orders:</strong></h3>
