--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,7 +24,7 @@
                   </li>
                   <li>
                     <div class="message-body">
-                        <p><strong>Price:</strong> <%= @item.price %></p>
+                        <p><strong>Price:</strong> ¥ <%= @item.price %></p>
                      </div>
                   </li>
               </ul>
